[package]
name = "GitApi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
reqwest = { version = "0.12.15", features = ["json"] }
dotenv = "0.15.0"
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
octocrate = { version = "*", features = ["repos"] }
futures = "0.3.31"
anyhow = "1.0.98"
